tests/paczka1/small_fuzzy/17069420.err
Error in line 2: cn7K A9e8 89,6
Error in line 7: cn7K S321 2,3
